--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -106,21 +106,41 @@
                     @Html.EditorFor(model => model.Investment.description, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Investment.description, "", new { @class = "text-danger" })
 
-
+                   
                 </div>
 
-                @*Categories list with checkboxes - populates using an ajax call (load_categories) below*@
                 <div class="form-group">
-                    <label title=@ViewBag.Tooltips["categories"]>Investment Tags</label>
+                    <label title=@ViewBag.Tooltips["categories"]>Choose a Category</label>
                     <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["categories"]"></span>
-                    <div class="col-md-10">
-                        <div id="CatList">
-                            <ul></ul>
-                        </div>
-                        @*Hidden input field that javascript below adds stuff to, this is sent to the controller*@
-                        <input name="categories" id="categories" type="hidden" />
-                        @*@Html.ActionLink("Add New Tag", "Create", "Categories")*@
+                    <br />
+                    <select id="categorySelect" class="form-control">
+                        @foreach (var category in Model.Categories)
+                        {
+                            <option id=@category.ID data-id=@category.ID value=@category.ID>@category.name</option>
+                        }
+                    </select>
+                    @*Hidden input field that javascript below adds stuff to, this is sent to the controller*@
+                    <input name="categories" id="categories" type="hidden" />                 
+                </div>
 
+                <div class="form-group">
+                    <label title="Choose the metrics you wish to add">Choose the Associated Metrics</label>
+                    <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["categories"]"></span>
+                    <select id="metricSelect" class="form-control">
+                       
+                    </select>
+                    
+                    
+                    <input name="metrics" id="metrics" type="hidden" />   
+                </div>
+
+
+            </div>
+
+            <div class="col-md-4">
+
+                @*Categories list with dropdown menu*@
+               
 
                         <div class="form-group">
                             <div>
@@ -133,10 +153,7 @@
 
 
 
-            </div>
-
-            <br />
-        </div>
+          
     }
 
 </div>
@@ -148,54 +165,36 @@
         //selectedCategories is an array which is put into the hidden categories field and then sent to the controller
         selectedCategories = [];
 
-        //this ajax call goes over to public/usercategories and snatches up the categories in the system
-        //it then puts the ones that are NOT base categories into the categories checkbox area
-        //when they are clicked, it triggers toggle_category
-        function load_categories() {
-            $.ajax({
-                url: '/public/usercategories',
-                type: 'GET',
-                success: function (data) {
-                    //$('#CatList').html('<ul>');
-                    data.map(function (category) {
-                        if (!category.isBase) {
-                            $('#CatList ul').append('<li id="cat' + category.ID + '" data-id=' + category.ID + '><span id="catspan' + category.ID + '" class="fa fa-square-o"></span> ' + category.name + '</li>');
-                            $('#cat' + category.ID).click(function () { toggle_category(category.ID + "," + category.baseID); });
-                        }
-                    });
-                    //$('#CatList').append('</ul>');
-                }
-            })
-        }
+        
 
-        function toggle_category(id) {
-            // if it is not there
-            // add the hidden input element
-            // add the checkmark to the category
-            if (!$('#catspan' + id).hasClass('fa fa-check-square-o')) {
-                selectedCategories.push(id);
-                $('#categories').val(selectedCategories.toString());
-                console.log($('#categories').val())
-                $('#catspan' + id).removeClass('fa fa-square-o');
-                $('#catspan' + id).addClass('fa fa-check-square-o');
-            }
-            else {
+        //function toggle_category(id) {
+        //    // if it is not there
+        //    // add the hidden input element
+        //    // add the checkmark to the category
+        //    if (!$('#catspan' + id).hasClass('fa fa-check-square-o')) {
+        //        selectedCategories.push(id);
+        //        $('#categories').val(selectedCategories.toString());
+        //        console.log($('#categories').val())
+        //        $('#catspan' + id).removeClass('fa fa-square-o');
+        //        $('#catspan' + id).addClass('fa fa-check-square-o');
+        //    }
+        //    else {
 
-                // if it is there
-                // remove the hidden input element
-                // remove the checkmark on the category
-                var i = selectedCategories.indexOf(id);
-                selectedCategories.splice(i, 1);
-                $('#categories').val(selectedCategories.toString());
-                $('#catadd' + id).remove();
-                $('#catspan' + id).removeClass('fa fa-check-square-o');
-                $('#catspan' + id).addClass('fa fa-square-o');
+        //        // if it is there
+        //        // remove the hidden input element
+        //        // remove the checkmark on the category
+        //        var i = selectedCategories.indexOf(id);
+        //        selectedCategories.splice(i, 1);
+        //        $('#categories').val(selectedCategories.toString());
+        //        $('#catadd' + id).remove();
+        //        $('#catspan' + id).removeClass('fa fa-check-square-o');
+        //        $('#catspan' + id).addClass('fa fa-square-o');
 
-            }
-        }
+        //    }
+        //}
 
 
-        //When the submit button is clicked, it
+        //When the submit button is clicked, it submits the form
         $('#submitButton').click(function () {
             $('#createInvestmentForm').submit();
         });
@@ -217,10 +216,25 @@
         };
         $('#recipientSelect').change(updateProjectsOut);
 
+        //This does an ajax call to populate the metrics dropdown whenever the category dropdown changes
+        function updateCategoryMetrics() {
+            $.ajax({
+                url: '/Categories/GetCategoryMetrics/' + $('#categorySelect').val() + '/',
+                type: 'get',
+                success: function (data) {
+                    var html = '';
+                    data.map(function (metric) {
+                        html += '<option value=' + metric.ID + '>' + metric.name + '</option>'
+                    });
+                    $('#metricSelect').html(html);
+                }
+            });
+        };
+        $('#categorySelect').change(updateCategoryMetrics);
+
         //These functions need to run on when the page loads, so they're collected into one function and then run on page load
         function initialize() {
-            load_categories();
-            updateProjectsOut();
+            updateCategoryMetrics();
             addCurrencyMask();
         }
 
