Added Remove Category functionality

--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -167,31 +167,7 @@
 
 
 
-        //function toggle_category(id) {
-        //    // if it is not there
-        //    // add the hidden input element
-        //    // add the checkmark to the category
-        //    if (!$('#catspan' + id).hasClass('fa fa-check-square-o')) {
-        //        selectedCategories.push(id);
-        //        $('#categories').val(selectedCategories.toString());
-        //        console.log($('#categories').val())
-        //        $('#catspan' + id).removeClass('fa fa-square-o');
-        //        $('#catspan' + id).addClass('fa fa-check-square-o');
-        //    }
-        //    else {
-
-        //        // if it is there
-        //        // remove the hidden input element
-        //        // remove the checkmark on the category
-        //        var i = selectedCategories.indexOf(id);
-        //        selectedCategories.splice(i, 1);
-        //        $('#categories').val(selectedCategories.toString());
-        //        $('#catadd' + id).remove();
-        //        $('#catspan' + id).removeClass('fa fa-check-square-o');
-        //        $('#catspan' + id).addClass('fa fa-square-o');
-
-        //    }
-        //}
+        
 
 
         //When the submit button is clicked, it submits the form
@@ -207,11 +183,12 @@
 
             if (selectedCategories.indexOf(categoryID) == -1) {
                 $('#displayCatMetrics').append(
-                    '<div id="catID_' + categoryID + '">' +
+                    '<div id="catID_' + categoryID + '" class="removeCategory">' +
                     '<h4> <i class="fa fa-minus-circle" aria-hidden="true" title="Click to Remove this Metric" class="removeCategory"></i>' + $('#categorySelect option:selected').attr("data-name") + '</h4>' +
                     '<ul></ul>' + 
                     '</div>');
                 selectedCategories.push(categoryID);
+                $('.removeCategory').click(function () { removeCategory(this.id) });
                 console.log('selectedCategories = ' + selectedCategories);
             }
 
@@ -315,6 +292,7 @@
         
         $('.removeMetric').click(function () { removeMetrics(this.id) });
         $('.removeCategory').click(function () { removeCategory(this.id) });
+       
 
         function addCurrencyMask() {
             $('#Investment_amount').mask('000,000,000,000.00', { reverse: true });
